# cpptudes

./: .gitignore  README.md  setup.sh  tude++_environment_setup.md
.claude/agents/: cpp-expert.md  csharp-expert.md  curriculum-designer.md  lesson-writer.md
.claude/skills/cpp-expert/: SKILL.md
.claude/skills/csharp-expert/: SKILL.md
.claude/skills/curriculum-designer/: SKILL.md
.claude/skills/lesson-writer/: SKILL.md
cpptudes/000-setup-guide/: CMakeLists.txt  README.md  main.cpp
cpptudes/001-sudoku/: CMakeLists.txt  README.md  main.cpp  sudoku.cpp  sudoku.hpp
cpptudes/002-file-processor/: CMakeLists.txt  README.md  file_processor.cpp  file_processor.hpp  main.cpp
cpptudes/003-parameter-passing/: CMakeLists.txt  README.md  main.cpp  telemetry.cpp  telemetry.hpp
cpptudes/004-image-pipeline/: CMakeLists.txt  README.md  image_buffer.cpp  image_buffer.hpp  main.cpp
dev/: best-practices.md  concept-coverage.md  cpp-and-cs-experts-criticism-response.md  criticisms.md  curr-designer-criticism-response.md  curriculum-map.md  draft-prompts.md
dev/lessons/: 001-sudoku-spec.md
tests/: build_all.sh  verify_student.sh
